{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "e053d83d-8535-4868-a630-72c397b5d7c3",
            "actions": [
                {
                    "name": "QButtonClick",
                    "type": "Button",
                    "id": "618f08ab-7a07-40cf-a3c8-0f92bedb73d3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WButtonClick",
                    "type": "Button",
                    "id": "8b102efc-3ce3-44f2-aa6b-63c50c2f0bcb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "EButtonClick",
                    "type": "Button",
                    "id": "9dee79f0-db68-4c3e-933b-afcafc5a5a5c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RButtonClick",
                    "type": "Button",
                    "id": "3dd55fee-0310-480a-951e-d111f267683f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "7c78f711-47be-47b3-b3e1-04865a1d14a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "LeftMouseClick",
                    "type": "Value",
                    "id": "6a73f7fa-bf06-4d7e-ac53-fa6e2c526e46",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "ArrowUpClick",
                    "type": "Button",
                    "id": "41d80404-79c8-4c07-bb6a-55568b64eca2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ArrowDownClick",
                    "type": "Button",
                    "id": "54747ac8-dbe3-464d-b73c-87c128a022f5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ArrowLeftClick",
                    "type": "Button",
                    "id": "698338ce-238a-449f-830c-270be72b0f80",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ArrowRightClick",
                    "type": "Button",
                    "id": "6faa3e42-d72b-4e67-8a54-f7d6d772fd4e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectClick",
                    "type": "Button",
                    "id": "581d02ac-c4e3-418e-ac16-a6dbc3bbc39e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ZoomOut",
                    "type": "Button",
                    "id": "0f94d516-b444-4a32-af0a-d47b86fc77e2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ZoomIn",
                    "type": "Button",
                    "id": "28561bfc-00d2-47fe-97ef-87a6df8882ab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Test",
                    "type": "Button",
                    "id": "eff9d875-de2e-4d55-95a7-1e723325c83f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TestY",
                    "type": "Button",
                    "id": "ad65bd75-1db2-4d28-a1a9-6035ad724364",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectNextCharacter",
                    "type": "Button",
                    "id": "9d5f88cd-7b60-4de9-bafd-87df0f29f18a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectPreviousCharacter",
                    "type": "Button",
                    "id": "ea3b674b-df29-4a25-be2d-2c204c9d6ea3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "44e43fc3-222a-44bd-8b0e-66a961cf5a4c",
                    "path": "<Keyboard>/q",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "QButtonClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87633496-25f8-4720-8c9c-acaa5bf5b2e0",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "EButtonClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "56e8340e-13c9-40a9-9426-b65baf585e5b",
                    "path": "<Keyboard>/w",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "WButtonClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74675439-f35a-4098-ac29-ae7ea8d87b19",
                    "path": "<Keyboard>/r",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "RButtonClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1157a2df-7454-43be-84e8-c17f80af27ba",
                    "path": "<Keyboard>/b",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe2c0d37-b13f-4f2f-8028-26b55420ca74",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "LeftMouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "efbe31bd-deaa-4b88-b46a-fc30e3cc9c32",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "ArrowUpClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "86fac896-41c7-41f7-b264-fda9ed6f3243",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "ArrowDownClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "20ce7863-0d9b-41c0-8323-60a7cf95c7a3",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "ArrowLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b08bc65f-d8e4-4a61-9d7e-54de02fa536d",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "ArrowRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d72a8822-1533-426c-be42-e739aa829a07",
                    "path": "<Keyboard>/f",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "SelectClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aba80308-1ab1-4b94-af1d-95a9276bdab4",
                    "path": "<Keyboard>/period",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "ZoomOut",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c220781-60e0-4033-a4db-76c06987f93c",
                    "path": "<Keyboard>/comma",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "ZoomIn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "410f9425-52bb-45df-99db-91b497c4705e",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Test",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a7fa1ad-066e-48b0-aef9-519d299d0e17",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "TestY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "126036a9-efdb-47f5-9773-8dfbd5460919",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "SelectNextCharacter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd1a7ce5-3de1-4080-aadf-b80a23bcdec4",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "SelectPreviousCharacter",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "QuestUI",
            "id": "3052e362-56ee-4f77-b5b7-5d5a335137f0",
            "actions": [
                {
                    "name": "Test",
                    "type": "Button",
                    "id": "72d3cb93-a3a7-477b-9cc4-e01878d426bc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DisableQuestUI",
                    "type": "Button",
                    "id": "94cab8f4-a6a5-464a-8311-c96b09f59e0a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "QuestMovement",
                    "type": "Button",
                    "id": "a549cc41-2f19-4355-b83a-b046e5346a8b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4aab5aea-1ed9-4e5b-b4b7-d4497f1d9b99",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Test",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85302d05-7c9d-43a9-ab4e-dbd71d4ebd95",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "DisableQuestUI",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "237c8f38-9cad-410a-8ea1-7c21fada2514",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "DisableQuestUI",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "402f2bf1-28c2-4a26-b4bc-5985dd44ba8f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuestMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c9b06aab-4fbe-4d7f-b0e1-511af07fd10e",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "QuestMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b9355ce9-afbf-43c6-83d4-8f064bb2a79b",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "QuestMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3fc4ea66-a0e7-4dd2-a02b-e46c98e4cbd4",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "QuestMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "572a15e9-a33a-4500-819a-1151735cc7ec",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "QuestMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "InventoryUI",
            "id": "00730d4c-f8a2-47ad-a1e4-3f601bbd57b6",
            "actions": [
                {
                    "name": "Test",
                    "type": "Button",
                    "id": "a6df8010-b323-4296-a372-4c30ba82bf15",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DisableInventoryUI",
                    "type": "Button",
                    "id": "bd0e9c66-9512-4acf-850c-45c59ce61d5a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "InventoryMovement",
                    "type": "PassThrough",
                    "id": "e49492d9-ebe1-42f9-baca-c623ebbd984d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ba5e1909-cd3c-45b0-a068-18685bd5cfa2",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Test",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a80e7dae-7a49-4b08-9de5-b913f6bed235",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "DisableInventoryUI",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e250808-275d-4b51-bcb2-0fcf67eefa67",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "DisableInventoryUI",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "eba39aeb-b2c9-4622-9097-478a7ceea26e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InventoryMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1d6498ab-247c-47d4-a64a-4a6408675c23",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "InventoryMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1c0c6b8d-94f5-4158-bb79-93c8003aef53",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "InventoryMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c31b0189-e25d-4f10-90de-8abd87322d31",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "InventoryMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "57a384e3-eeee-4864-8500-5ef31a3bd189",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "InventoryMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Conversation",
            "id": "bba1ee92-5585-4d47-9802-db9688f45a02",
            "actions": [
                {
                    "name": "ConversationInteract",
                    "type": "Button",
                    "id": "727d1062-3fd9-402e-9e81-4c31dc72bd7d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9c5db3cf-8bfe-4a22-831e-58d59fc773aa",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "ConversationInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "46ba40a9-8ea7-49d9-9032-580a98968c6e",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "ConversationInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard & Mouse",
            "bindingGroup": "Keyboard & Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}